--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,32 +2,31 @@
   <h1>Fullstack Technologies</h1>
 
   <div class="card-wraper">
-    
-    <div class="card" routerLinkActive="active" routerLink="javascript/controleflow" (click)="navigateTo('javascript/controleflow')">
+    <div class="card" routerLinkActive="active"  (click)="navigateTo('javascript')">
       JavaScript
     </div>
-    <div class="card" routerLinkActive="active" routerLink="typescript" (click)="navigateTo('typescript')">
+    <div class="card" routerLinkActive="active" (click)="navigateTo('typescript')">
       TypeScript
     </div>
-    <div class="card" routerLinkActive="active" routerLink="angular" (click)="navigateTo('angular')">
+    <div class="card" routerLinkActive="active"  (click)="navigateTo('angular')">
       Angular
     </div>
-    <div class="card" routerLinkActive="active" routerLink="d3js" (click)="navigateTo('d3js')">
+    <div class="card" routerLinkActive="active"  (click)="navigateTo('d3js')">
       D3 Js
     </div>
-    <div class="card" routerLinkActive="active" routerLink="nodejs" (click)="navigateTo('nodejs')">
+    <div class="card" routerLinkActive="active"  (click)="navigateTo('nodejs')">
       Node Js
     </div>
-    <div class="card" routerLinkActive="active" routerLink="nestjs" (click)="navigateTo('nestjs')">
+    <div class="card" routerLinkActive="active"  (click)="navigateTo('nestjs')">
       Nest Js
     </div>
-    <div class="card" routerLinkActive="active" routerLink="sql/sql" (click)="navigateTo('sql/sql')">
-      sql
+    <div class="card" routerLinkActive="active"  (click)="navigateTo('sql/sql')">
+      SQL
     </div>
-    <div class="card" routerLinkActive="active" routerLink="gitHub/gitprocess" (click)="navigateTo('gitHub/gitprocess')">
+    <div class="card" routerLinkActive="active"  (click)="navigateTo('gitHub')">
       Git Hub
     </div>
-    <div class="card" routerLinkActive="active" routerLink="aws/deployment" (click)="navigateTo('aws/deployment')">
+    <div class="card" routerLinkActive="active"  (click)="navigateTo('aws')">
       Aws
     </div>
   </div>
