--- a/src/app/sql/advanced-sql/advanced-sql.component.html
+++ b/src/app/sql/advanced-sql/advanced-sql.component.html
@@ -1,4 +1,5 @@
 <div class="oveall-wraper" appMaximize #arrayMethodsConcepts="maximize" id="arrayMethodsConcepts">
     <div class="examples">
+        <h2>Interview questions</h2>
     </div>
 </div>
