--- a/src/app/aws/deployment/deployment.component.scss
+++ b/src/app/aws/deployment/deployment.component.scss
@@ -185,28 +185,19 @@ p, h1, h2, h3, h4, h5, h6 {
     }
   }
   
-  hr {
-    margin: 30px 0;
-    border: 0;
-    height: 1px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0));
-  }
+.swap {
+  cursor: pointer;;
+  position: absolute;
+  top: -20px;
+  right: -20px;
+  z-index: 10;
+  background-color: #FFF;
+  border-radius: 50%;
+  padding: 3px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  transition: transform 0.2s;
   
-  .swap {
-    cursor: pointer;
-    width: 24px;
-    height: 24px;
-    position: absolute;
-    top: -20px;
-    right: -20px;
-    z-index: 10;
-    background-color: #FFF;
-    border-radius: 50%;
-    padding: 3px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    transition: transform 0.2s;
-    
-    &:hover {
-      transform: scale(1.1);
-    }
+  &:hover {
+    transform: scale(1.1);
   }
+}
