--- a/src/app/sql/advanced-sql/advanced-sql.component.scss
+++ b/src/app/sql/advanced-sql/advanced-sql.component.scss
@@ -3,7 +3,7 @@ p, h1, h2, h3, h4, h5, h6 {
     padding: 0px;
   }
  
-  .overall-wrapper {
+  .oveall-wraper {
     padding: 20px 20px 100px;
     display: flex;
     flex-direction: column;
@@ -15,5 +15,6 @@ p, h1, h2, h3, h4, h5, h6 {
     .examples{
       width: 100%;
       height: auto;
+      padding: 20px;
     }
   }
