--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,8 @@ p,h1,h2,h3,h4,h5,h6{
     padding: 0px;
 }
 .wraper{
-    width: 100vw;
+    // width: 100vw;
+    height: 100vh;
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -33,8 +34,8 @@ p,h1,h2,h3,h4,h5,h6{
 } 
 .modules{
     width: 100%;
-    padding-top: 10px;
-  
+    height: 100%;
+    padding-top: 10px;  
 }  
   
 }
