--- a/src/app/sql/advanced-sql/advanced-sql.component.scss
+++ b/src/app/sql/advanced-sql/advanced-sql.component.scss
@@ -16,5 +16,47 @@ p, h1, h2, h3, h4, h5, h6 {
       width: 100%;
       height: auto;
       padding: 20px;
+
+       h2 {
+    font-size: 1.75rem;
+    margin-bottom: 1rem;
+    color: #343a40;
+    text-align: center;
+  }
+
+  .question-answer {
+    margin-bottom: 2rem;
+    background-color: #ffffff;
+    padding: 1rem 1.5rem;
+    border-left: 5px solid #007bff;
+    border-radius: 8px;
+
+    h4 {
+      font-size: 1.2rem;
+      color: #007bff;
+      margin-bottom: 0.5rem;
+    }
+
+    p {
+      font-size: 1rem;
+      line-height: 1.6;
+      color: #212529;
+
+      code {
+        background-color: #f1f3f5;
+        padding: 0.2rem 0.4rem;
+        border-radius: 4px;
+        font-family: 'Courier New', monospace;
+        display: block;
+        margin-top: 0.4rem;
+        margin-bottom: 0.4rem;
+      }
+
+      small {
+        font-size: 0.875rem;
+        color: #6c757d;
+      }
+    }
+  }
     }
   }
