--- a/src/app/sql/sqlhome/sqlhome.component.scss
+++ b/src/app/sql/sqlhome/sqlhome.component.scss
@@ -64,5 +64,6 @@ p,h1,h2,h3,h4,h5,h6{
         height: 100%;
         width: 80%;
         overflow-y: auto; 
+        overflow-x: hidden;
     }
 }
