sql completed nest js

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,10 +17,10 @@
     <div class="card" routerLinkActive="active"  (click)="navigateTo('nodejs')">
       Node Js
     </div>
-    <div class="card" routerLinkActive="active"  (click)="navigateTo('nestjs')">
+    <div class="card" routerLinkActive="active"  (click)="navigateTo('nest')">
       Nest Js
     </div>
-    <div class="card" routerLinkActive="active"  (click)="navigateTo('sql/sql')">
+    <div class="card" routerLinkActive="active"  (click)="navigateTo('sql')">
       SQL
     </div>
     <div class="card" routerLinkActive="active"  (click)="navigateTo('gitHub')">
