--- a/src/app/sql/filtering-sorting/filtering-sorting.component.html
+++ b/src/app/sql/filtering-sorting/filtering-sorting.component.html
@@ -4,11 +4,14 @@
             <img class="swap" *ngIf="sqlBasicsConcepts.checkfullscreen() !=  'hide'" (click)="sqlBasicsConcepts.toggle()" src="../../../assets/Minimize icon.svg" alt="Minimize">
             <div class="header">
                 <p> <span class="question">What:</span>
-                SQL sorting and filtering are <strong>database operations used to organize and retrieve specific data from tables based on criteria and ordering requirements.</strong> </p>
-            <p> <span class="question">Why:</span>
-                SQL sorting and filtering are important because they <strong>enable efficient data retrieval, improve query performance, and allow precise data selection from large datasets.</strong></p>
-            <p> <span class="question">Where:</span>
-                SQL sorting and filtering are used <strong>in database queries, data analysis, reporting systems, and anywhere structured data needs to be organized and filtered.</strong></p>
+                    SQL sorting and filtering help you find and arrange specific data in a table based on conditions or order.
+                </p>
+                <p> <span class="question">Why:</span>
+                    They make it easier to get the exact data you need, especially from large tables.
+                </p>
+                <p> <span class="question">Where:</span>
+                    Used in database searches, reports, dashboards, and any place where data needs to be filtered or sorted.
+                </p>
             </div>
         </div>
     <div class="examples">
