--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,10 +8,38 @@ p,h1,h2,h3,h4,h5,h6{
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    h1{
-        padding-bottom: 10px;
-        text-align: center;
-    }
+     h1 {
+            padding-bottom: 10px;
+            text-align: center;
+            font-size: 3em; 
+            font-weight: bold;
+            text-align: center;
+            background-image: linear-gradient(to right, rgba(0, 128, 0, 0.659),rgba(255, 0, 0, 0.53), rgb(141, 141, 6), blue); 
+            background-size: 200% auto; 
+            -webkit-background-clip: text;
+            background-clip: text; 
+            -webkit-text-fill-color: transparent;   
+              background-image: radial-gradient(circle at center,
+                #4285F4,
+                #DB4437, 
+                #F4B400, 
+                #0F9D58 
+                );
+                background-size: 300% 300%; 
+                animation: radial-gradient-animation 8s ease-in-out infinite alternate; 
+        }
+
+       @keyframes radial-gradient-animation {
+            0% {
+                background-position: 50% 50%;
+            }
+            50% {
+                background-position: 0% 0%; 
+            }
+            100% {
+                background-position: 100% 100%; 
+            }
+        }
     .card-wraper{ 
         width: 100%;
         display: flex;
@@ -34,7 +62,7 @@ p,h1,h2,h3,h4,h5,h6{
 } 
 .modules{
     width: 100%;
-    height: 100%;
+    height: 90%;
     padding-top: 10px;  
 }  
   
