--- a/src/app/aws/aws/aws.component.scss
+++ b/src/app/aws/aws/aws.component.scss
@@ -20,7 +20,7 @@ p,h1,h2,h3,h4,h5,h6{
         flex-wrap: wrap;
         gap: 10px;
         overflow-y: auto;
-        padding:10px;
+        padding:20px 20px 150px 20px;
         border: 1px solid gray;
         border-radius: 5px;
 
@@ -64,8 +64,9 @@ p,h1,h2,h3,h4,h5,h6{
         }
     }
     .sub-components-wraper{
-        height: 85%;
+        height:100%;
         width: 100%;
-        overflow-y: auto;        
+        overflow-y: auto;  
+        padding-bottom: 30px;      
     }
 }
