--- a/src/app/sql/data-type/data-type.component.scss
+++ b/src/app/sql/data-type/data-type.component.scss
@@ -4,7 +4,7 @@ p, h1, h2, h3, h4, h5, h6 {
   }
  
   .oveall-wraper {
-    padding: 20px 20px 100px;
+    padding: 20px 20px 130px 20px;
     display: flex;
     flex-direction: column;
     gap: 20px;
