--- a/src/app/type-script/ts/ts.component.scss
+++ b/src/app/type-script/ts/ts.component.scss
@@ -11,15 +11,16 @@ p,h1,h2,h3,h4,h5,h6{
     align-self: center;
    
     .list{
-        height: 100%;
+        height: 80%;
         width: 20%;
         overflow-y: auto;
         display:flex;
         flex-direction: column;
         gap: 10px;
-        padding: 10px;
-           border-right: 1px solid rgba(128, 128, 128, 0.195);
+        padding: 20px 20px 150px 20px;
+        border-right: 1px solid rgba(128, 128, 128, 0.195);
         border-radius: 5px;
+        
 
         .styled {
             // height: 40px;
